@startuml

' Copyright (c) 2025 Contributors to the Eclipse Foundation
'
' See the NOTICE file(s) distributed with this work for additional
' information regarding copyright ownership.
'
' This program and the accompanying materials are made available under the
' terms of the Apache License Version 2.0 which is available at
' <https://www.apache.org/licenses/LICENSE-2.0>
'
' SPDX-License-Identifier: Apache-2.0

interface Reloc {
    Relocatable data type
}

interface Deref<Target> {
    fn deref(&self) -> &Target
}

interface DerefMut<Target> {
    fn deref_mut(&mut self) -> &mut Target
}

interface Builder<Output> {
    fn build(self) : Result<Output>
}

interface CommData {
    const ID: &'static str
}

class InstanceSpecifier {
    specifier: String
    ---
    + new(name: impl AsRef<str>) : Result<Self>
    + check_str(name: &str) : bool
}

enum FindServiceSpecifier {
    Specific(InstanceSpecifier)
    Any
}

interface Runtime {
    type ServiceDiscovery<I: Interface>
    type Subscriber<T: CommData>
    type ProducerBuilder<I: Interface>
    type Publisher<T: CommData>
    ---
    fn find_service<I>(spec: FindServiceSpecifier)
        -> ServiceDiscovery<I>
    fn producer_builder<I>(spec: InstanceSpecifier)
        -> ProducerBuilder<I>
}

interface RuntimeBuilder<B: Runtime> {
    ---
    fn load_config(&mut self, path: &Path) : &mut Self
}

interface ProviderInfo {
    fn offer_service(&self) : Result<()>
    fn stop_offer_service(&self) : Result<()>
}

interface Sample<T: CommData> {
    ---
    Immutable, ordered by reception
}

interface SampleMut<T: CommData> {
    fn send(self) : Result<()>
}

interface SampleMaybeUninit<T: CommData> {
    type SampleMut: SampleMut<T>
    ---
    unsafe fn assume_init(self) : SampleMut<T>
    fn write(self, value: T) : SampleMut<T>
    fn write_default(self) : SampleMut<T>
}

interface PlacementDefault {
    ---
    unsafe fn placement_default(ptr: *mut Self)
}

interface Producer<R: Runtime + ?Sized> {
    type Interface: Interface
    type OfferedProducer: OfferedProducer<R>
    ---
    fn offer(self) : Result<OfferedProducer>
    fn new(info: R::ProviderInfo) : Result<Self>
}

interface OfferedProducer<R: Runtime + ?Sized> {
    type Interface: Interface
    type Producer: Producer<R>
    ---
    fn unoffer(self) : Result<Producer>
    ---
    #[must_use] attribute
}

interface ProducerBuilder<I: Interface, R: Runtime + ?Sized> {
}

interface Publisher<T: CommData, R: Runtime + ?Sized> {
    type SampleMaybeUninit<'a>: SampleMaybeUninit<T> + 'a
    ---
    fn allocate(&self) : Result<SampleMaybeUninit<'_>>
    fn send(&self, value: T) : Result<()>
    fn new(id: &str, info: R::ProviderInfo) : Result<Self>
}

interface Interface {
    const INTERFACE_ID: &'static str
    ---
    type Consumer<R: Runtime + ?Sized>: Consumer<R>
    type Producer<R: Runtime + ?Sized>: Producer<R>
}

interface Consumer<R: Runtime + ?Sized> {
    fn new(info: R::ConsumerInfo) : Self
}

interface ServiceDiscovery<I: Interface, R: Runtime + ?Sized> {
    type ConsumerBuilder: ConsumerBuilder<I, R>
    type ServiceEnumerator: IntoIterator<Item=ConsumerBuilder>
    ---
    fn get_available_instances(&self)
        -> Result<ServiceEnumerator>
    fn get_available_instances_async(&self)
        -> impl Future<Output=Result<ServiceEnumerator>> + Send
}

interface ConsumerDescriptor<R: Runtime + ?Sized> {
    fn get_instance_identifier(&self) : &InstanceSpecifier
}

interface ConsumerBuilder<I: Interface, R: Runtime + ?Sized> {
}

interface Subscriber<T: CommData, R: Runtime + ?Sized> {
    type Subscription: Subscription<T, R>
    ---
    fn new(id: &'static str, info: R::ConsumerInfo)
        -> Result<Self>
    fn subscribe(&self, max_num_samples: usize)
        -> Result<Subscription>
}

interface Subscription<T: CommData, R: Runtime + ?Sized> {
    type Subscriber: Subscriber<T, R>
    type Sample<'a>: Sample<T> where Self: 'a
    ---
    fn unsubscribe(self) : Subscriber
    fn try_receive<'a>(
        &'a self,
        scratch: &'_ mut SampleContainer<Sample<'a>>,
        max_samples: usize
    ) -> Result<usize>
    fn receive<'a>(
        &'a self,
        scratch: &'_ mut SampleContainer<Sample<'a>>,
        new_samples: usize,
        max_samples: usize
    ) -> impl Future<Output=Result<usize>> + Send
}

class SampleContainer<S> {
    inner: FixedCapacityQueue<S>
    ---
    + new(capacity: usize) : Self
    + iter<T>() : Iterator<&T>
    + pop_front() : Option<S>
    + push_back(new: S) : Result<()>
    + sample_count() : usize
    + front<T: CommData>() : Option<&T>
}

Reloc <|-- CommData
CommData <|-- Sample
CommData <|-- SampleMut
CommData <|-- Publisher
CommData <|-- Subscriber

Deref <|-- Sample
DerefMut <|-- SampleMut

SampleMaybeUninit --> SampleMut : builds
SampleMut --> Sample : into_sample()

Runtime --> ServiceDiscovery
Runtime --> Subscriber
Runtime --> ProducerBuilder
Runtime --> Publisher
Runtime --> ProviderInfo

RuntimeBuilder --|> Builder

ProviderInfo --> OfferedProducer
ProviderInfo --> Producer

Producer --> OfferedProducer : offer()
OfferedProducer --> Producer : unoffer()

ProducerBuilder --|> Builder

Publisher --> SampleMaybeUninit : allocate()

Interface --> Producer : defines
Interface --> Consumer : defines

ServiceDiscovery --> ConsumerBuilder
ServiceDiscovery --> InstanceSpecifier
ServiceDiscovery --> FindServiceSpecifier

ConsumerBuilder --|> ConsumerDescriptor
ConsumerBuilder --|> Builder

ConsumerDescriptor --> InstanceSpecifier : provides

Subscriber --> Subscription : subscribe()
Subscription --> Subscriber : unsubscribe()

Subscription --> SampleContainer : populates
SampleContainer --> Sample : contains

Publisher --> Subscriber : event bridge
Runtime --> FindServiceSpecifier : uses
InstanceSpecifier <.. FindServiceSpecifier : component

SampleMaybeUninit --|> PlacementDefault

PlacementDefault --|> Default
Sample --|> Send
Sample --|> PartialOrd
Sample --|> Ord
Sample --|> Debug
SampleMut --|> Debug
SampleMaybeUninit --|> Debug

CommData --|> Send
CommData --|> Debug

InstanceSpecifier --|> Clone
InstanceSpecifier --|> Debug

FindServiceSpecifier --|> From

@enduml
